# font-kit

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
c/: Cargo.toml  build.rs  cbindgen.toml
c/src/: lib.rs
examples/: fallback.rs  list-fonts.rs  match-font.rs  render-glyph.rs
resources/tests/eb-garamond/: EBGaramond12.otc
resources/tests/times-roman-pcf/: COPYING  timR12.pcf
src/: canvas.rs  descriptor.rs  error.rs  family.rs  family_handle.rs  family_name.rs  file_type.rs  font.rs  handle.rs  hinting.rs  lib.rs  loader.rs  matching.rs  metrics.rs  outline.rs  properties.rs  set.rs  source.rs  test.rs  utils.rs
src/loaders/: core_text.rs  directwrite.rs  freetype.rs  mod.rs
src/platform/: macos.rs  unix.rs  windows.rs
src/sources/: core_text.rs  directwrite.rs  fontconfig.rs  fs.rs  mem.rs  mod.rs  multi.rs
tests/: select_best_match.rs  select_font.rs  tests.rs
